-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.3, 6.9.0, 6.9.1
-
-
0d1730681 (dev), 9b25239d7 (6.10), dfa694cca (6.9), f04c0d65f (tqtc/lts-6.8), 82cbc476e (tqtc/lts-6.5)
When a ListView is used within a QML Container to display entries and is not directly assigned as the contentItem, items that would normally be positioned outside the visible area may appear in incorrect locations. This misplacement occurs when the ListView is wrapped inside another Item. The severity of the displacement appears to vary depending on the number and structure of sibling or surrounding child items.
To reproduce the issue, run the attached example project.